# candle_demo_1-1

./: .gitignore  Cargo.toml  README.MD
embedding_generator/: Cargo.toml
embedding_generator/src/: main.rs
inf_server/: Cargo.toml
inf_server/src/: main.rs
models_hf/: Cargo.toml
models_hf/src/: bert.rs  lib.rs  open_chat.rs  quant_phi.rs  token_output_stream.rs
test_app_2/: Cargo.toml
test_app_2/src/: main.rs
testing_app/: Cargo.toml
testing_app/src/: main.rs
