[package]
name = "embedding_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
csv = "1.3.0"
rayon = "1.8.0"
anyhow = "1.0.75"
candle = { version = "0.3.1", package = "candle-core" }
models_hf = { path = "../models_hf" }
