[package]
name = "inf_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
bincode = "2.0.0-rc.3"
serde = { version = "1.0.188" }
serde_json = "1.0.107"
anyhow = "1.0.75"
csv = "1.3.0"
models_hf = { path = "../models_hf" }
