[package]
name = "models_hf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] ,optional = true }
candle = { version = "0.3.1", package = "candle-core" }
candle-transformers = "0.3.1"
candle-nn = "0.3.1"
anyhow = "1.0.75"
clap = "4.4.10"
tokenizers = "0.15.0"
hf-hub = "0.3.2"
serde = { version = "1.0.188" }
serde_json = "1.0.107"
csv = "1.3.0"
axum = "0.7.1"
bincode = "2.0.0-rc.3"
